<resources>
    <string name="app_name">GitU</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Home">Home</string>
    <string name="Favorite">Favorite</string>
    <string name="Information">Information</string>
    <string name="username">UserName</string>
    <string name="following">Following</string>
    <string name="_120">120</string>
    <string name="followers">Followers </string>
    <string name="name">Name</string>
    <string name="repositories">Repositories</string>
    <string name="background">background</string>
    <string name="back">back</string>
    <string name="logo">logo</string>
    <string name="tab_1">Followers</string>
    <string name="tab_2">Following</string>
    <string name="wave_background">wave background</string>
    <string name="meet">Meet Developers Around The World.</string>
    <string name="maintanance">This Page is Currently Under Development</string>
    <string name="title_home">Tittle Home</string>
    <string name="title_favorite">Title Favorite</string>
    <string name="title_settings">Tittle Settings</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="change_languange">Change Languange</string>
    <string name="search">Find your Favorite GitU user right now!</string>
    <string name="reminder">Reminder already set up on 09.00 AM :)</string>
    <string name="remindcancel">Reminder has been canceled :(</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="addFavorite">User has been added in Favorite List!</string>
    <string name="deletedFavorite">User has been deleted from Favorite List!</string>
    <string name="skip_intro">Skip Intro</string>
    <string name="next">Next</string>
</resources>